packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_broken_then_good_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 4
  }
]
