packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sub_align_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      9
    ],
    "items": 3
  }
]
