packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sub_eof_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      4
    ],
    "items": 2
  }
]
