packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sub_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      14,
      17
    ],
    "items": 4
  }
]
