packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sup_align_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 3
  }
]
