packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sup_call_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      22
    ],
    "items": 6
  }
]
