packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_empty_sup_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      20
    ],
    "items": 4
  }
]
